# HockeyRL

./: .gitignore  CITATION.cff  README.md  build_container_requirements.txt  container.def  pyproject.toml  requirements.txt  test_td3.ps1  train_td3.ps1
.github/workflows/: tex_to_pdf.yaml
TDMPC/: evaluate.py  helper.py  tdmpc.py  train.py
TDMPC/configs/: default.yaml
ext/: README.md  loaders.py
report/: .gitignore  main.bib  template.tex
report/td3_plots/: plots.ipynb
src/: agent_factory.py  control.py  environments.py  episode.py  evaluation.py  named_agent.py  opponent_pool.py  show_game.py  training_monitor.py  wandb_utils.py
src/DQN/: action_space.py  dqn.py  evaluate.py  helper.py  train.py
src/SAC/: .gitignore  adversarial.py  agent.py  comprl_autostart.sh  comprl_client.py  config.yaml  ensemble.py  ensemble.yaml  evaluate.py  evaluate_puffer.py  exploration.py  fetch-agents.py  helper.py  memory.py  network.py  opponents.py  puffer_wrapper.py  render_game.py  rewards.py  sac.py  sac_example.yaml  sampler.py  selfplaymgr.py  train.py  utils.py
src/SAC2/: .gitignore  agent.py  config.yaml  helper.py  rewards.py  train.py
src/TD3/: actor_critic.py  config.yaml  config_reader.py  custom_opponent.py  enivornment_scheduler.py  feedforward.py  heatmap.py  if_else_bot.py  main.py  opponent_scheduler.py  replay_buffer.py  reward_shaper.py  rnd.py  run_client.py  schedule.py  td3.py  test.py
src/TDMPC/: TODO.md  action_hints.py  agent.py  comprl_autostart.sh  comprl_tdmpc.py  evaluate.py  (+7 more)
tournament_results/: head_to_head.json  tournament_ranking.csv
(+112 files in other folders)
